# prototype

./: .gitignore  .gitmodules  CMakeLists.txt  asio-test.cpp  deserialize.h  expected.h  futures.h  main.cpp  persisted-log.cpp  persisted-log.h  priority-queue.h  remote-procedure-call.h  replicated-log-2.cpp  replicated-log-2.h  replicated-log.cpp  replicated-log.h  rocksdb-handle.cpp  rocksdb-handle.h  rocksdb-transaction.h  scheduler.h  start.sh
futures/: base.h  box.h  continuation.h  devoidify.h  futures-2.cpp  futures-2.h  handler.h  helper.h
